Version 22     ??

--Fixed bug in lingering commit button when dragging a slider and releasing it
  in a way that presses the commit button (thanks Benjamin Y).

--Part of parchment was peeking out under black overlay square during board
  fade-out.  Made overlay square slightly larger to fix this.





Version 21     2015-April-2

--Added display of active player count in client.

--Moved client amulet display over to make room for large player balances that
  could move down to next line.

--Added support on server for vs-creator launch contest (collusion-proof
  replacement for amulet contest suggested originally by Jere as a joke).





Version 20     Live Server Fixes

--Added retry-based work-around for a bug in PHP/MySQL that triggers an
  occasional 'Unable to save result set' warning and query failure.




Version 20     2015-March-25

--Added a chime for amulet-holder on the display-stake screen when an amulet
  game is ready for them.




Version 19     Live Server Fixes

--Fixed bug that prevented next batch of amulets from being handed out.

--Added an amulet_summary page that lists all live amulets.

--Fixed bug in amulet_summary where holding user is listed twice if they lead.



Version 19     2015-March-25

--Added minutes-left display for amulet holder on leaderboard.

--Mirrored tick-down amulet score display on WAITING FOR OPPONENT page.

--Fixed decrement of users_to_skip_on_drop to only decrement one amulet at a
  time instead of all in parallel.

--Bounded users_to_skip when handing out dropped amulets at 10 max, and changed
  it to count only non-amulet games when setting users_to_skip.

--Floating amulets never handed out if there are unpaired amulet games waiting
  or if the number of active players is less than 2 * N + 3, where N is the
  number of held amulets.

--Added display of randomly-matched amulet stakes to amulet holder before the
  start of an amulet game.
